--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
-    "gsap": "^3.13.0",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.541.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
     "tailwindcss": "^4.1.12"
   },
